--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<link rel="stylesheet" href="css/style.css">
+</head>
 <div class="app">
 
 	<div class="cardList">
@@ -108,3 +112,6 @@
 	<a href="https://twitter.com/DevLoop01" target="_blank"><i class="fab fa-twitter-square"></i></a>
 	<a href="https://dribbble.com/devloop01" target="_blank"><i class="fab fa-dribbble"></i></a>
 </div>
+	</body>
+
+</html> 
