--- a/index.html
+++ b/index.html
@@ -1,108 +1,66 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Cole</title>
-	<meta name="description" content="">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="style.css">
-	<script  src="./script.js"></script>
-</head>
-<body>
-	<div class="app">
+<main>
+  <div>
+    <span>discover</span>
+    <h1>aquatic animals</h1>
+    <hr>
+    <p>Beauty and mystery are hidden under the sea. Explore with our application to know about Aquatic Animals.</p>
+    <a href="#">download app</a>
+  </div>
+  <div class="swiper">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide swiper-slide--one">
+        <div>
+          <h2>Jellyfish</h2>
+          <p>Jellyfish and sea jellies are the informal common names given to the medusa-phase of certain gelatinous members of the subphylum Medusozoa, a major part of the phylum Cnidaria.</p>
+          <a href="https://en.wikipedia.org/wiki/Jellyfish" target="_blank">explore</a>
+        </div>
+      </div>
+      <div class="swiper-slide swiper-slide--two">
+        <div>
+          <h2>Seahorse</h2>
+          <p>
+            Seahorses are mainly found in shallow tropical and temperate salt water throughout the world. They live in sheltered areas such as seagrass beds, estuaries, coral reefs, and mangroves. Four species are found in Pacific waters from North America to South America.
+          </p>
+          <a href="https://en.wikipedia.org/wiki/Seahorse" target="_blank">explore</a>
+        </div>
+      </div>
 
-		<div class="cardList">
-			<button class="cardList__btn btn btn--left">
-				<div class="icon">
-					<svg>
-						<use xlink:href="#arrow-left"></use>
-					</svg>
-				</div>
-			</button>
+      <div class="swiper-slide swiper-slide--three">
 
-			<div class="cards__wrapper">
-				<div class="card current--card">
-					<div class="card__image">
-						<img src="https://source.unsplash.com/Z8dtTatMVMw" alt="" />
-					</div>
-				</div>
+        <div>
+          <h2>octopus</h2>
+          <p>
+            Octopuses inhabit various regions of the ocean, including coral reefs, pelagic waters, and the seabed; some live in the intertidal zone and others at abyssal depths. Most species grow quickly, mature early, and are short-lived.
+          </p>
+          <a href="https://en.wikipedia.org/wiki/Octopus" target="_blank">explore</a>
+        </div>
+      </div>
 
-				<div class="card next--card">
-					<div class="card__image">
-						<img src="https://source.unsplash.com/9dmycbFE7mQ" alt="" />
-					</div>
-				</div>
+      <div class="swiper-slide swiper-slide--four">
 
-				<div class="card previous--card">
-					<div class="card__image">
-						<img src="https://source.unsplash.com/m7K4KzL5aQ8" alt="" />
-					</div>
-				</div>
-			</div>
+        <div>
+          <h2>Shark</h2>
+          <p>
+            Sharks are a group of elasmobranch fish characterized by a cartilaginous skeleton, five to seven gill slits on the sides of the head, and pectoral fins that are not fused to the head.
+          </p>
+          <a href="https://en.wikipedia.org/wiki/Shark" target="_blank">explore</a>
+        </div>
+      </div>
 
-			<button class="cardList__btn btn btn--right">
-				<div class="icon">
-					<svg>
-						<use xlink:href="#arrow-right"></use>
-					</svg>
-				</div>
-			</button>
-		</div>
+      <div class="swiper-slide swiper-slide--five">
 
-		<div class="infoList">
-			<div class="info__wrapper">
-				<div class="info current--info">
-					<h1 class="text name">Highlands</h1>
-					<h4 class="text location">Scotland</h4>
-					<p class="text description">The mountains are calling</p>
-				</div>
-
-				<div class="info next--info">
-					<h1 class="text name">Machu Pichu</h1>
-					<h4 class="text location">Peru</h4>
-					<p class="text description">Adventure is never far away</p>
-				</div>
-
-				<div class="info previous--info">
-					<h1 class="text name">Chamonix</h1>
-					<h4 class="text location">France</h4>
-					<p class="text description">Let your dreams come true</p>
-				</div>
-			</div>
-		</div>
-
-
-		<div class="app__bg">
-			<div class="app__bg__image current--image">
-				<img src="https://source.unsplash.com/Z8dtTatMVMw" alt="" />
-			</div>
-			<div class="app__bg__image next--image">
-				<img src="https://source.unsplash.com/9dmycbFE7mQ" alt="" />
-			</div>
-			<div class="app__bg__image previous--image">
-				<img src="https://source.unsplash.com/m7K4KzL5aQ8" alt="" />
-			</div>
-		</div>
-	</div>
-
-	<div class="loading__wrapper">
-		<div class="loader--text">Loading...</div>
-		<div class="loader">
-			<span></span>
-		</div>
-	</div>
-
-
-	<svg class="icons" style="display: none;">
-		<symbol id="arrow-left" xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'>
-			<polyline points='328 112 184 256 328 400'
-						 style='fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:48px' />
-		</symbol>
-		<symbol id="arrow-right" xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'>
-			<polyline points='184 112 328 256 184 400'
-						 style='fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:48px' />
-		</symbol>
-	</svg>
-</body>
-</html>
+        <div>
+          <h2>Dolphin</h2>
+          <p>
+            Dolphins are widespread. Most species prefer the warm waters of the tropic zones, but some, such as the right whale dolphin, prefer colder climates. Dolphins feed largely on fish and squid, but a few, such as the orca, feed on large mammals such as seals.
+          </p>
+          <a href="https://en.wikipedia.org/wiki/Dolphin" target="_blank">explore</a>
+        </div>
+      </div>
+    </div>
+    <!-- Add Pagination -->
+    <div class="swiper-pagination"></div>
+  </div>
+  <img src="https://cdn.pixabay.com/photo/2021/11/04/19/39/jellyfish-6769173_960_720.png" alt="" class="bg">
+  <img src="https://cdn.pixabay.com/photo/2012/04/13/13/57/scallop-32506_960_720.png" alt="" class="bg2">
+</main>
